--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/daka/daka",
     "pages/settings/settings",
     "pages/index2/index2",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/play/play"
   ],
   "window": {
     "backgroundTextStyle": "dark",
@@ -21,7 +22,7 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "text": "主页面",
+        "text": "学习",
         "iconPath": "images/tab_account2.png",
         "selectedIconPath": "images/tab_account2.png"
       },
@@ -37,5 +38,6 @@
         "selectedIconPath": "images/tab_account1.png"
       }
     ]
-  }
+  },
+  "requiredBackgroundModes":["audio"]
 }
