--- a/cloudfunctions/subscribeMessagesend/config.json
+++ b/cloudfunctions/subscribeMessagesend/config.json
@@ -10,7 +10,12 @@
     {
       "name": "myTrigger",     
       "type": "timer", 
-      "config": "0 30 18 * * * *"
+      "config": "0 0 19 * * * *"
+    },
+    {
+      "name": "myTrigger2",
+      "type": "timer",
+      "config": "0 5 19 * * * *"
     }
   ]
 }
